fix(operation-analysis): 云主机,磁盘按照组织聚合